--- a/notes-frontend/index.html
+++ b/notes-frontend/index.html
@@ -1,45 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/style.css" />
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header>
-        <h1>Notes App</h1>
-    
-      </header>
-      <div class="inputSection">
-        <input type="text" placeholder="Title" class="todo-heading" id="title">
-        <input type="text" placeholder="Description" class="todo-input" id="dec"/>
-        <button class="todo-button" type="submit"  onclick="add()">
-          ADD
-        </button>
-    
+      <h1>Notes App</h1>
+    </header>
+    <div class="inputSection">
+      <input type="text" placeholder="Title" class="todo-heading" id="title" />
+      <input
+        type="text"
+        placeholder="Description"
+        class="todo-input"
+        id="dec"
+      />
+
+      <button class="todo-button" type="submit" onclick="add()">ADD</button>
     </div>
-    <!-- <div class="container rounded-2 text-center">
-        <h1>Notes</h1>
-        <div class="row d-flex flex-column align-items-center justify-content-center">
-            <input type="text" name="" id="title" placeholder="Title..." />
-            <textarea name="" id="dec" cols="30" rows="10"  placeholder="Description....."></textarea>
-            <button id="enter" class="w-25 btn btn-info" onclick="add()">Add..</button>
 
-        </div>
-    </div> -->
-
-
-    <div id="display" class="d-flex row gap-1 text-wrap justify-content-center" ></div>
+    <div
+      id="display"
+      class="d-flex row gap-1 mt-5 text-wrap justify-content-center"
+    ></div>
 
     <script src="./script/main.js"></script>
-
-</body>
-
+  </body>
 </html>
