--- a/notes-frontend/index.html
+++ b/notes-frontend/index.html
@@ -15,11 +15,11 @@
   </head>
 
   <body>
-    <h1 class="done" id="doneDiv">DONE 
+    <h1 class="done" id="doneDiv">
+      DONE
       <div class="check"></div>
     </h1>
 
-   
     <header>
       <h1 id="appName">Notes App</h1>
     </header>
@@ -32,7 +32,9 @@
         id="dec"
       />
 
-      <button class="todo-button" id="addButton" type="submit" onclick="add()">ADD</button>
+      <button class="todo-button" id="addButton" type="submit" onclick="add()">
+        ADD
+      </button>
       <!-- <button class="todo-button" id="editButton" type="submit" >EDIT</button> -->
     </div>
 
