--- a/notes-frontend/index.html
+++ b/notes-frontend/index.html
@@ -20,6 +20,7 @@
       <div class="check"></div>
     </h1>
 
+
     <header>
       <h1 id="appName">Notes App</h1>
     </header>
@@ -42,7 +43,7 @@
       id="display"
       class="d-flex row gap-1 mt-5 text-wrap justify-content-center"
     ></div>
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./script/main.js"></script>
   </body>
 </html>
